# Balap-inV2Mobile

./: README.md
backend_django/: .gitignore  Dockerfile  celerybeat-schedule  docker-compose.yml  requirements.txt
backend_django/backend_django/: asgi.py  celery.py  firebase_config.py  settings.py  urls.py
backend_django/model/: apps.py  custom_model_classes.py  urls.py  views.py
backend_django/nginx/: default.conf
backend_django/tasks/: consumers.py  recommendation.py  routing.py  schedules.py  tasks.py
backend_rust/: .gitignore  Cargo.toml
backend_rust/src/: config.rs  database.rs  main.rs  model.rs  mongorepo.rs
backend_rust/src/handlers/: akunhandler.rs  laporanhandler.rs  mod.rs  notifikasihandler.rs  petahandler.rs  rekomendasihandler.rs
backend_rust/src/models/: app_state.rs  laporanmodel.rs  masyarakatmodel.rs  mod.rs  notifikasimodel.rs  pemerintahmodel.rs  petamodel.rs  rekomendasimodel.rs
backend_rust/src/routes/: akunroute.rs  laporanroute.rs  mod.rs  notifikasiroute.rs  rekomendasiroute.rs
backend_rust/src/utils/: cors.rs  mod.rs  s3service.rs
frontend/: .gitignore  flutter_native_splash.yaml  pubspec.yaml
frontend/android/: build.gradle.kts
frontend/android/app/: build.gradle.kts
frontend/integration_test/: laporan_test.dart
frontend/lib/: main.dart
frontend/lib/callback/: callbackbuatlaporan.dart  callbackpenggunabaru.dart
frontend/lib/coach_mark/: beranda_coachmark.dart  callbackcoachmark.dart  coachmark.dart  coachmarkbuatlapor.dart
frontend/test/: kirim_laporan_test.dart  laporan_provider_test.dart  widget_test.dart
(+70 files in other folders)
