[package]
name = "backend_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
mongodb = "3"
dotenvy = "0.15"
env_logger = "0.11.8"
actix-cors = "0.7.1"
serde_json = "1.0.140"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.84.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.16.0", features = ["v4"] }
